deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-api
  namespace: cards
spec:
  type: ClusterIP
  selector:
    app: cards-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
